--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <!-- main app components -->
     <!-- custom angular components -->
     <script src="js/directives/lsAlert.js" type="text/javascript"></script>
+    <script src="js/directives/calendarDirective.js" type="text/javascript"></script>
     <!-- main app file -->
     <script src="js/app.js" type="text/javascript"></script>
     <!-- services -->
